--- a/astro-blog-template/.dockerignore
+++ b/astro-blog-template/.dockerignore
@@ -1,12 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-.tmp/
-.cache/
-.git/
-build/
-node_modules/
-data/
+/node_modules
+/npm-debug.log*
+/yarn-error.log
+/yarn.lock
+/package-lock.json
+logs/
+run/
+/logs
 
 # production
 
