--- a/astro-blog-template/nginx/default.conf
+++ b/astro-blog-template/nginx/default.conf
@@ -1,5 +1,5 @@
 server {
-  listen 9002; # 此处填写你的端口
+  listen 80; # 此处填写你的端口
   gzip on; # 开启gzip
   gzip_min_length 1k; # 小于1k的不压缩
   gzip_comp_level 9; # 压缩等级
@@ -7,7 +7,7 @@ server {
   gzip_vary on; # 启用压缩
   gzip_disable "MSIE [1-6]\.";
 
-  server_name www.pointfree.cn; # 此处填写你的域名
+  server_name pointfree.cn; # 此处填写你的域名
   charset utf-8; # 此处填写你的编码
   root /usr/share/nginx/html; # 此处填写你的项目路径
   index index.html index.htm index.nginx-debian.html; # 此处填写你的首页
